--- a/src/components/LinkCard.astro
+++ b/src/components/LinkCard.astro
@@ -52,6 +52,7 @@ import { Image } from 'astro:assets';
     }
     .thumbnailImage {
         /* height: 100%; */
+        height: 100%;
         object-fit: cover;
         border-radius: 180px;
     }
