🖼️ Began adding meta tags

--- a/src/layouts/linktreeLayout.astro
+++ b/src/layouts/linktreeLayout.astro
@@ -12,9 +12,25 @@ import Socials from '../components/Socials.astro';
 <html lang="en">
 	<head>
         <meta charset="UTF-8" />
-		<meta name="description" content="trans on description!!" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<!-- Primary Meta Tags -->
+        <title>Trans on Campus</title>
+        <meta name="title" content="Trans on Campus" />
+        <meta name="description" content="Support, socials & advocacy for trans/gender diverse students" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="" />
+        <meta property="og:title" content="Trans on Campus" />
+        <meta property="og:description" content="Support, socials & advocacy for trans/gender diverse students" />
+        <meta property="og:image" content="" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="" />
+        <meta property="twitter:title" content="Trans on Campus" />
+        <meta property="twitter:description" content="Support, socials & advocacy for trans/gender diverse students" />
+        <meta property="twitter:image" content="" />
+
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
