🔨 Minor changes to ReadMe, styling, and naming

--- a/src/layouts/defaultLayout.astro
+++ b/src/layouts/defaultLayout.astro
@@ -13,10 +13,33 @@ import Footer from '../components/Footer.astro';
 <html lang="en">
 	<head>
         <meta charset="UTF-8" />
-		<meta name="description" content="trans on description!!" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<!-- Primary Meta Tags -->
+        <title>Trans on Campus</title>
+        <meta name="title" content="Trans on Campus" />
+        <meta name="description" content="Support, socials & advocacy for trans/gender diverse students" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="#todo" />
+        <meta property="og:title" content="Trans on Campus" />
+        <meta property="og:description" content="Support, socials & advocacy for trans/gender diverse students" />
+        <meta property="og:image" content="https://raw.githubusercontent.com/wiki-Bird/toc-website/main/public/postesdr3.png" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="#todo" />
+        <meta property="twitter:title" content="Trans on Campus" />
+        <meta property="twitter:description" content="Support, socials & advocacy for trans/gender diverse students" />
+        <meta property="twitter:image" content="https://raw.githubusercontent.com/wiki-Bird/toc-website/main/public/postesdr3.png" />
+
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+        <link rel="manifest" href="../favicon/site.webmanifest">
+
 		<meta name="generator" content={Astro.generator} />
+        <meta name="viewport" content="width=device-width" />
 		<title>{title}</title>
 	</head>
     <body>
