--- a/src/layouts/linktreeLayout.astro
+++ b/src/layouts/linktreeLayout.astro
@@ -19,14 +19,14 @@ import Socials from '../components/Socials.astro';
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="#todo" />
+        <meta property="og:url" content="https://toc.fag.software/linktree/" />
         <meta property="og:title" content="Trans on Campus" />
         <meta property="og:description" content="Support, socials & advocacy for trans/gender diverse students" />
         <meta property="og:image" content="https://raw.githubusercontent.com/wiki-Bird/toc-website/main/public/postesdr3.png" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="#todo" />
+        <meta property="twitter:url" content="https://toc.fag.software/linktree/" />
         <meta property="twitter:title" content="Trans on Campus" />
         <meta property="twitter:description" content="Support, socials & advocacy for trans/gender diverse students" />
         <meta property="twitter:image" content="https://raw.githubusercontent.com/wiki-Bird/toc-website/main/public/postesdr3.png" />
