--- a/src/pages/linktree.astro
+++ b/src/pages/linktree.astro
@@ -29,7 +29,7 @@ import { Image } from 'astro:assets';
                     style=""
                 />
                 <LinkCard
-                    href="https://youtube.com/clip/UgkxkaBIKdU3x_fZ7kchycBvSbQArzjly-mH?si=lvbdfPa2IwML0gHu"
+                    href="https://forms.gle/YYRaW3nrKDTs3Gus6"
                     title="PLEASE SIGN UP HERE!"
                     subtitle="You don't have to be a UoA student :)"
                     image="../tocIcon.webp"
