🔨 Fixes to Titles

--- a/src/layouts/defaultLayout.astro
+++ b/src/layouts/defaultLayout.astro
@@ -14,21 +14,21 @@ import Footer from '../components/Footer.astro';
 	<head>
         <meta charset="UTF-8" />
 		<!-- Primary Meta Tags -->
-        <title>Trans on Campus</title>
-        <meta name="title" content="Trans on Campus" />
+        <title>{title}</title>
+        <meta name="title" content={title} />
         <meta name="description" content="Support, socials & advocacy for trans/gender diverse students" />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="#todo" />
-        <meta property="og:title" content="Trans on Campus" />
+        <meta property="og:url" content="https://toc.fag.software/linktree/" />
+        <meta property="og:title" content={title} />
         <meta property="og:description" content="Support, socials & advocacy for trans/gender diverse students" />
         <meta property="og:image" content="https://raw.githubusercontent.com/wiki-Bird/toc-website/main/public/postesdr3.png" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="#todo" />
-        <meta property="twitter:title" content="Trans on Campus" />
+        <meta property="twitter:url" content="https://toc.fag.software/linktree/" />
+        <meta property="twitter:title" content={title} />
         <meta property="twitter:description" content="Support, socials & advocacy for trans/gender diverse students" />
         <meta property="twitter:image" content="https://raw.githubusercontent.com/wiki-Bird/toc-website/main/public/postesdr3.png" />
 
