--- a/src/layouts/linktreeLayout.astro
+++ b/src/layouts/linktreeLayout.astro
@@ -13,21 +13,21 @@ import Socials from '../components/Socials.astro';
 	<head>
         <meta charset="UTF-8" />
 		<!-- Primary Meta Tags -->
-        <title>Trans on Campus</title>
-        <meta name="title" content="Trans on Campus" />
+        <title>{title}</title>
+        <meta name="title" content={title} />
         <meta name="description" content="Support, socials & advocacy for trans/gender diverse students" />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://toc.fag.software/linktree/" />
-        <meta property="og:title" content="Trans on Campus" />
+        <meta property="og:title" content={title} />
         <meta property="og:description" content="Support, socials & advocacy for trans/gender diverse students" />
         <meta property="og:image" content="https://raw.githubusercontent.com/wiki-Bird/toc-website/main/public/postesdr3.png" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://toc.fag.software/linktree/" />
-        <meta property="twitter:title" content="Trans on Campus" />
+        <meta property="twitter:title" content={title} />
         <meta property="twitter:description" content="Support, socials & advocacy for trans/gender diverse students" />
         <meta property="twitter:image" content="https://raw.githubusercontent.com/wiki-Bird/toc-website/main/public/postesdr3.png" />
 
@@ -39,7 +39,6 @@ import Socials from '../components/Socials.astro';
 
 		<meta name="generator" content={Astro.generator} />
         <meta name="viewport" content="width=device-width" />
-		<title>{title}</title>
 	</head>
     <body>
         <slot />
