--- a/src/components/LinkCard.astro
+++ b/src/components/LinkCard.astro
@@ -8,7 +8,6 @@ interface Props {
 }
 
 const { href, title, subtitle, image, style } = Astro.props;
-import { Image } from 'astro:assets';
 ---
 <li class=`link-card ${style}`>
 	<a href={href} target="_blank" rel="noopener noreferrer">
@@ -24,16 +23,38 @@ import { Image } from 'astro:assets';
 	</a>
 </li>
 <style>
-    .mini {
-        width: 30%!important;
+    /* Desktop: */
+    @media only screen and (min-width: 800px) {
+        .mini {
+            width: 30%!important;
+        }
+        .title {
+            font-size: 1.1rem;
+        }
+        .subtitle {
+            font-size: 0.85rem;
+        }
     }
+    /* Mobile */
+    @media only screen and (max-width: 799px) {
+        .mini {
+            width: 100%!important;
+        }
+        .title {
+            font-size: 1rem;
+        }
+        .subtitle {
+            font-size: 0.75rem;
+        }
+        .link-card {
+            width: 95%; 
+        }
+    }
+
     .attention {
-        /* background:red!important; */
         box-shadow: 0 0 30px 2px rgba(255, 233, 186, 0.459)!important;
     }
     .title {
-        /* horizontally center */
-        font-size: 1.1rem;
         font-weight: 600;
         transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
     }
@@ -41,7 +62,6 @@ import { Image } from 'astro:assets';
         opacity: 0.7;
         transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
         font-style: italic;
-        font-size: 0.85rem;
     }
     .titles {
         flex: 1;
@@ -51,19 +71,15 @@ import { Image } from 'astro:assets';
         flex-direction: column;
     }
     .thumbnailImage {
-        /* height: 100%; */
         height: 100%;
         object-fit: cover;
-        border-radius: 180px;
+        border-radius: 50%;
     }
 	.link-card {
 		list-style: none;
 		display: flex;
-		/* padding: 1px; */
-		/* background-color: #fff; */
 		background-image: none;
 		background-size: 400%;
-        /* width: 80%; */
 		border-radius: 30px;
         height: 57px;
 		transition: all 0.2s cubic-bezier(0.22, 1, 0.36, 1);
