--- a/src/layouts/defaultLayout.astro
+++ b/src/layouts/defaultLayout.astro
@@ -60,8 +60,16 @@ import Footer from '../components/Footer.astro';
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: "Inter", system-ui, sans-serif;
+        padding: 0;
+        margin: 0;
+        line-height: 1.3;
 	}
+    body, html {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
     code {
 		font-family:
 			Menlo,
@@ -73,4 +81,32 @@ import Footer from '../components/Footer.astro';
 			Courier New,
 			monospace;
 	}
+    @font-face {
+        font-family: 'Inter';
+        src: url('/fonts/InterVariable.ttf') format('truetype-variations');
+        font-weight: normal ``;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Metropolis";
+        src: url("/fonts/Metropolis-Regular.ttf") format("truetype");
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Metropolis";
+        src: url("/fonts/Metropolis-Bold.ttf") format("truetype");
+        font-weight: 600;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Metropolis";
+        src: url("/fonts/Metropolis-ExtraBold.ttf") format("truetype");
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+    }
 </style>
