--- a/src/layouts/linktreeLayout.astro
+++ b/src/layouts/linktreeLayout.astro
@@ -57,7 +57,18 @@ import Socials from '../components/Socials.astro';
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: "Inter", system-ui, sans-serif;
 		background-size: 224px;
 	}
+    body {
+        padding: 0;
+        margin: 0;
+    }
+    @font-face {
+        font-family: 'Inter';
+        src: url('/fonts/InterVariable.ttf') format('truetype-variations');
+        font-weight: normal ``;
+        font-style: normal;
+        font-display: swap;
+    }
 </style>
