--- a/src/pages/linktree.astro
+++ b/src/pages/linktree.astro
@@ -9,7 +9,7 @@ import { Image } from 'astro:assets';
     <main>
         <div class="content">
             <div class="header">
-                <a href="../">
+                <a href="/">
                     <img src="../tocIcon.webp" alt="Trans on Campus" class="tocIcon" width="110" height="110"/>
                     <div class="name">
                         Trans on Campus
@@ -81,17 +81,69 @@ import { Image } from 'astro:assets';
     </main>
 </Layout>
 <style>
+    /* Desktop: */
+    @media only screen and (min-width: 800px) {
+        main {
+            align-items: center;
+            overflow: hidden;
+        }
+        html {
+            overflow: hidden;
+            min-height: 100dvh;
+            padding: 0;
+        }
+        .subtitle {
+            font-size: 1.05rem;
+        }
+        .link-card-horizontal {
+            display: flex;
+            justify-content: space-between;
+            margin: 10px 0;
+        }
+        .link-card-grid {
+            width: 100%;
+        }
+    }
+    /* Mobile */
+    @media only screen and (max-width: 799px) {
+        html {
+            min-height: calc(100vh + 6rem);
+            padding: 0;
+        }
+        .header {
+            margin-top: 2rem;
+            margin: 1rem;
+        }
+        .subtitle {
+            font-size: 0.95rem;
+        }
+        .link-card-horizontal {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(18ch, 2fr));
+            grid-row-gap: 20px!important;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
+            width: 95%;
+        }
+        .link-card-grid {
+            width: 95%;
+            align-items: center;
+        }
+        .content {
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+    
     html {
         background: linear-gradient(rgb(164, 59, 201), rgb(130, 101, 243));
-        min-height: 100dvh;
-        overflow: hidden;
     }
     main {
         display: flex;
         justify-content: center;
-        align-items: center;
         height: 100vh;
-        overflow: hidden;
     }
     .header {
         color: white;
@@ -114,7 +166,6 @@ import { Image } from 'astro:assets';
         text-decoration: none;
     }
     .subtitle {
-        font-size: 1.05rem;
         opacity: 0.9;
         font-weight: 600;
         margin: 1rem 0;
@@ -128,17 +179,8 @@ import { Image } from 'astro:assets';
     }
     .link-card-grid {
 		display: flex;
-		/* grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr)); */
         flex-direction: column;
 		gap: 1.2rem;
 		padding: 0;
-        width: 100%;
-        /* overflow: auto; */
 	}
-    .link-card-horizontal {
-        display: flex;
-        /* evenly space until edges */
-        justify-content: space-between;
-        margin: 10px 0;
-    }
 </style>
