✨ BFixes for linktree mobile

--- a/src/pages/linktree.astro
+++ b/src/pages/linktree.astro
@@ -107,7 +107,7 @@ import { Image } from 'astro:assets';
     /* Mobile */
     @media only screen and (max-width: 799px) {
         html {
-            min-height: calc(100vh + 6rem);
+            min-height: calc(100vh + 100px);
             padding: 0;
         }
         .header {
