✨ Added homepage sections

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -34,6 +34,7 @@
 <style>
     .navbarButton {
         background-color: #734ad3;
+        background: linear-gradient(29deg, rgba(116,76,213,1) 0%, rgba(108,57,200,1) 26%, rgba(116,76,213,1) 100%);
         border: none;
         color: white;
         text-align: center;
@@ -48,6 +49,7 @@
     }
     .navbarButton:hover {
         background-color: #6840c4;
+        background: linear-gradient(29deg, rgba(116,76,213,1) 0%, rgba(108,57,200,1) 26%, rgb(104, 64, 197) 100%);
     }
     .navbarLeft {
         display: flex;
