--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,3 +2,14 @@
     <p>bleh footer blehh</p>
     socials links, contact email, where is toc, linktree
 </div>
+<style>
+    .footer {
+        margin: 0;
+        background: rgb(116,76,213);
+        background: linear-gradient(29deg, rgba(116,76,213,1) 0%, rgba(108,57,200,1) 26%, rgba(116,76,213,1) 60%, rgba(134,117,241,1) 100%);
+    }
+    p {
+        padding: 0;
+        margin: 0;
+    }
+</style>
