--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -21,8 +21,8 @@
             <li><a href="/resources/">Resources</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/events/">Events</a></li>
-            <li><a href="/sponsors/">Sponsors</a></li>
-            <!-- <li id="navButton"><a href="/join/">Join</a></li> -->
+            <li><a href="/linktree/">LinkTree</a></li>
+            <!-- <li><a href="/sponsors/">Sponsors</a></li> -->
         </ul>
     </div>
 
