📝 Began adding resource pages

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,7 +13,7 @@
 
     <div class="navbarLeft">
         <a href="/" class="navbarLogo">
-            <img src="./tocTempLogo.png" alt="Trans on Campus">
+            <img src="/tocTempLogo.png" alt="Trans on Campus">
         </a>
 
         <ul class="navbarList">
@@ -57,7 +57,11 @@
         align-items: center;
     }
     .navbar {
-        background: white;
+        /* background: white; */
+        background: rgb(214, 108, 124);
+        background: 
+            linear-gradient(18deg, rgba(249,222,226,1) 0%, rgba(231,164,193,1) 45%, rgba(86,203,251,1) 100%),
+            url(https://grainy-gradients.vercel.app/noise.svg);
         height: 90px;
         display: flex;
         flex-direction: row;
