--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,26 +2,26 @@
     <!-- <p>bleh footer blehh</p> -->
     <!-- socials links, contact email, where is toc, linktree, copyright, src -->
     <div class="section spaced">
-        <a href="#">Find QSpace</a>
-        <a href="#">Email Us</a>
-        <a href="#">LinkTree</a>
+        <a href="https://youtube.com/clip/UgkxkaBIKdU3x_fZ7kchycBvSbQArzjly-mH?si=lvbdfPa2IwML0gHu">Find QSpace</a>
+        <a href="mailto:transoncampus.uoa@gmail.com">Email Us</a>
+        <a href="/linktree/">LinkTree</a>
     </div>
     <div class="section stack">
-        <a href="/"><img src="./tocIconRound.png" class="footerLogo" alt="Trans on Campus"/></a>
+        <a href="/"><img src="/tocIconRound.png" class="footerLogo" alt="Trans on Campus"/></a>
         <div><a href="https://github.com/wiki-Bird/toc-website">© 2024 Trans on Campus</a></div>
     </div>
     <div class="section">
         <a href="https://discord.gg/wHNrGSpfwd" target="_blank" rel="noopener noreferrer">
-            <img src="./icons/discord2.svg" class="footerSocial" alt="Discord"/>
+            <img src="/icons/discord2.svg" class="footerSocial" alt="Discord"/>
         </a>
         <a href="https://instagram.com/toc_uoa" target="_blank" rel="noopener noreferrer">
-            <img src="./icons/insta2.svg" class="footerSocial" alt="Instagram"/>
+            <img src="/icons/insta2.svg" class="footerSocial" alt="Instagram"/>
         </a>
         <a href="https://www.facebook.com/profile.php?id=100085172237348" target="_blank" rel="noopener noreferrer">
-            <img src="./icons/facebook2.svg" class="footerSocial" alt="Facebook"/>
+            <img src="/icons/facebook2.svg" class="footerSocial" alt="Facebook"/>
         </a>
         <a href="https://github.com/wiki-Bird/toc-website" target="_blank" rel="noopener noreferrer">
-            <img src="./icons/git.svg" class="footerSocial" alt="Source"/>
+            <img src="/icons/git.svg" class="footerSocial" alt="Source"/>
         </a>
         <!-- <a href="mailto:transoncampus.uoa@gmail.com" target="_blank" rel="noopener noreferrer">
             <img src="./icons/mail.png" class="footerSocial" alt="Email"/>
@@ -68,6 +68,7 @@
         text-decoration: underline;
     }
     .footer {
+        flex-shrink: 0;
         /* break into 3 sections */
         padding: 1.5em;
         color: white;
