--- a/src/layouts/defaultLayout.astro
+++ b/src/layouts/defaultLayout.astro
@@ -44,8 +44,10 @@ import Footer from '../components/Footer.astro';
 	</head>
     <body>
         <Navbar />
-        <slot />
-        <Footer />
+        <div class="pageContent">
+            <slot />
+        </div>
+            <Footer />
     </body>
 <style is:global>
     :root {
@@ -67,6 +69,8 @@ import Footer from '../components/Footer.astro';
         height: 100%;
         margin: 0;
         padding: 0;
+        display: flex;
+        flex-direction: column;
     }
     @font-face {
         font-family: 'Inter';
@@ -95,5 +99,24 @@ import Footer from '../components/Footer.astro';
         font-weight: 700;
         font-style: normal;
         font-display: swap;
+    }
+    .pageContent {
+        flex: 1 0 auto;
+    }
+    blockquote {
+        margin: 0;
+        padding: 1rem;
+        background: #f0f0f0;
+        border-left: 5px solid #3d354d;
+    }
+    a {
+        text-decoration: none;
+        color: #0066ff;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+    a:active {
+        color: #0043a7;
     }
 </style>
